--- a/Daemon/CMakeLists.txt
+++ b/Daemon/CMakeLists.txt
@@ -8,6 +8,8 @@ set(DAEMON_SOURCES
 	"src/artefact/Directory.cpp"
 	"src/artefact/File.h"
 	"src/artefact/File.cpp"
+	"src/interface/TcpServer.h"
+	"src/interface/TcpServer.cpp"
 	"src/scanner/Scanner.h"
 	"src/scanner/Scanner.cpp"
 	"src/parser/Parser.h"
@@ -15,4 +17,5 @@ set(DAEMON_SOURCES
 
 add_executable (titanic_daemon ${DAEMON_SOURCES})
 target_link_libraries(titanic_daemon LINK_PRIVATE PocoFoundation)
+target_link_libraries(titanic_daemon LINK_PRIVATE PocoNet)
 target_compile_features(titanic_daemon PUBLIC cxx_auto_type)
