Prepare tree structure

--- a/Daemon/CMakeLists.txt
+++ b/Daemon/CMakeLists.txt
@@ -8,6 +8,13 @@ set(DAEMON_SOURCES
 	"src/artefact/Directory.cpp"
 	"src/artefact/File.h"
 	"src/artefact/File.cpp"
+	"src/artefact/Node.h"
+	"src/artefact/Node.cpp"
+	"src/exception/Exception.h"
+	"src/exception/Exception.cpp"
+	"src/exception/InsufficientPrivileges.hpp"
+	"src/exception/InvalidInput.hpp"
+	"src/exception/NotFound.hpp"
 	"src/interface/TcpServer.h"
 	"src/interface/TcpServer.cpp"
 	"src/scanner/Scanner.h"
